--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <!--经历:工作-->
             <div class="item">
               <header class="item-hd">
-                <h3 class="item-name">光环大数据</h3>
+                <h3 class="item-name"></h3>
                 <span class="item-time">2016.6 至今</span>
                 <a class="btn item-more" href="#">实习</a>
               </header>
