change home page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/shanligang">
+            <a href="https://github.com/changpw">
               <span class="contact-link">panwangchange</span>
               <span class="iconfont">
                 <svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li>
-            <a href="mailto:gisboyshan@gmail.com">
+            <a href="#">
               <span class="contact-link">1589273884@qq.com</span>
               <span class="iconfont">
                 <svg width="16px" height="16px" viewBox="0 0 1024 1024">
@@ -64,8 +64,8 @@
             </a>
           </li>
           <li>
-            <a href="tel:18868196132">
-              <span class="contact-link">158-9009-8384</span>
+            <a href="#">
+              <span class="contact-link">158-9**9-8384</span>
               <span class="iconfont">
                 <svg width="16px" height="16px" viewBox="0 0 1024 1024">
                   <path d="M256 1024l512 0c26.464 0 48-21.536 48-48l0-928c0-26.464-21.536-48-48-48l-512 0c-26.464 0-48 21.536-48 48l0 928c0 26.464 21.536 48 48 48zM240 48c0-8.832 7.168-16 16-16l512 0c8.832 0 16 7.168 16 16l0 928c0 8.832-7.168 16-16 16l-512 0c-8.832 0-16-7.168-16-16l0-928zM288 864l448 0c8.832 0 16-7.168 16-16l0-672c0-8.832-7.168-16-16-16l-448 0c-8.832 0-16 7.168-16 16l0 672c0 8.832 7.168 16 16 16zM304 192l416 0 0 640-416 0 0-640zM496 928c0 17.664 14.336 32 32 32s32-14.336 32-32c0-17.664-14.336-32-32-32-17.664 0-32 14.336-32 32zM448 128l128 0c8.832 0 16-7.168 16-16s-7.168-16-16-16l-128 0c-8.832 0-16 7.168-16 16s7.168 16 16 16z"></path>
@@ -111,7 +111,7 @@
               <header class="item-hd">
                 <h3 class="item-name">河南农业大学</h3>
                 <span class="item-time">2015.09 至 2019.06</span>
-                <a class="btn item-more" href="http://www.zafu.edu.cn/">在校</a>
+                <a class="btn item-more" href="#">在校</a>
               </header>
               <div class="item-bd">
                 <p class="item-des">在校做的一些项目，其中包括：</p>
